filebeat-sidecar/filebeat-ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ipcat-zuoguocai
  namespace: devops
spec:
  ports:
  - name: http
    port: 8888
    protocol: TCP
    targetPort: 5000
  selector:
    app: ipcat-zuoguocai
  type: NodePort
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress-for-zuoguocai  # Ingress 的名字，仅用于标识
  namespace: devops
spec:
  tls:
  - hosts:
    - devops.zuoguocai.xyz
    secretName: zuogucoai-secret
  rules:                      # Ingress 中定义 L7 路由规则
  - host: devops.zuoguocai.xyz   # 根据 virtual hostname 进行路由（请使用您自己的域名）
    http:
      paths:                  # 按路径进行路由
      - path: /
        backend:
          serviceName: ipcat-zuoguocai  # 指定后端的 Service 为之前创建的 nginx-service
          servicePort: 8888
